explore streaming issue fixed and host overview overlapping css fix (#1826)

--- a/investigate-hosts/app/styles/investigate-hosts/_manifest.scss
+++ b/investigate-hosts/app/styles/investigate-hosts/_manifest.scss
@@ -4,7 +4,7 @@
 .host-content {
   .liquid-container,
   .liquid-child {
-    position: relative;
+    position: relative !important;
     top: 0;
     bottom: 0;
     right: 0;
